Changes since CEXP-2.1
 2012/06/28:
 - cexp.c, configure.ac: added '-i/-I' options and --enable-interactive-default
 - cexp.c: fall back to trying argv[0] as a symbol file if no -s given and
   no internal symbol table is found.
 - configure.ac: for linux/host demo, link terminfo (libtinfo) if necessary/available.
Changes since CEXP-2.0.beta
 2011/10/10:
 - libtecla/Makefile.am: add manpages to EXTRA_DIST and MAINTAINERCLEANFILES.
 2011/10/10:
 - Makefile.am: add cxxdummy to EXTRA_DIST.
 - Makefile.am: add cpptest contents explicitly to EXTRA_DIST (instead of
                entire subdir which would include CVS/
 2011/08/04:
 - Makefile.am: export host_alias, host_os, and host_cpu.
 2011/07/15:
 - cexp.c: set terminal to VMIN/VTIME=1/0 in native readline (no readline, no tecla).
 2011/07/15:
 - Makefile.am: export rtems_bsp, RTEMS_BSP, enable_rtemsbsp, package_subdir
   variables so third-party makefiles 'inherit' them (in case any is embedded
   in an installation path/prefix).
 2010/06/10:
 - configure.ac: check for multilibbed cpukit only if host_os is RTEMS.
 2010/05/06:
 - Makefile.am:
    o enforce linking undefined symbols needed by test modules (demo program)
    o link demo with CXX
 - bfdstuff.c: BUGFIX -- Ignore relocations that refer to a symbol in a
               discarded linkonce section.
               This should also fix a problem reported by Luciano Piccoli where
               a module refused to load because the .eh_frame section
               had a relocation referring to the section name of a discarded
               linkonce. Since that section had been folded into .text in
               the main executable it could not be found.
               During testing I also found that just relocating to the
               previous instance of a linkonce section is incorrect because
               to compiler would sometimes generate slightly different code
               resulting in different section sizes (original vs. discarded