@@ -94,7 +94,8 @@ if USELOADER
 SEGS_SRCS        = $(SEGS_CPU_SRC) cexpsegs.c
 endif
 
-SRCS = cexp.c ctyps.c cexpsyms.c vars.c cexplock.h ctyps.h  cexpsyms.h  cexpsymsP.h
+SRCS = cexplock.h ctyps.h  cexpsyms.h  cexpsymsP.h
+SRCS+= cexp.c ctyps.c cexpsyms.c vars.c rshload.c
 SRCS+= cexpmod.h cexpmodP.h cexpmod.c vars.h cexp.tab.c cexp.tab.h
 SRCS+= cexpsegsP.h cexp_regex.h teclastuff.h rtems-hackdefs.h
 SRCS+= @srcdir@/getopt/mygetopt_r.c @srcdir@/getopt/mygetopt_r.h context.h
